--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "@tanstack/react-table": "^8.20.6",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -77,6 +79,7 @@
     "firebase-admin": "^13.0.2",
     "framer-motion": "^11.18.2",
     "graphql-request": "^7.1.2",
+    "inngest-cli": "^1.6.4",
     "ipfs-http-client": "^60.0.1",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.469.0",
